--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme"
             android:screenOrientation="portrait" >
-            
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity">
 
         </activity>
+        <activity android:name="ChooseButton" >
+        </activity>
+        <activity android:name=".ImageActivity">
+        </activity>
+
     </application>
 
 </manifest>
